[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "tasklistkata-1"
version = "0.1.0"
[tool.poetry.dependencies]
coverage = "^6.0.2"
expects = "^0.9.0"
mamba = "^0.11.2"
mypy = "^0.910"
py-expect = "^0.1.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
